--- a/index.html
+++ b/index.html
@@ -7,3 +7,6 @@
 .
 存档
 https://lib-h5lndgyx5rekewnrelzb7qux.1lib.cz
+Let $f(x)=\frac{1}{x}+\ln x-a (a>1)$
+and$x_{1}<x_{2}$ be the two roots of$$f(x)=0$$Try to determine the minimum of constant $\lambda \in \mathbb{R}$s.t.$$x_{1}+x_{2}<\lambda \left ( e^{a-1}-1 \right ) +2$$holds for all $a>1$
+Rmk :NEVER should you use L'Hospital's rule
